fix style on mobile and add filter for session status

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -21,7 +21,7 @@ body {
   margin: 0;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 300px;
   overflow:hidden;
 }
 
